Создано главное меню Создано меню создание и просмотра персонажей Создана таблица персонажей Реализовано обращение к БД, примитивное создание пользователя и проверка доступности имени

--- a/CollegeProjectCourse2/CollegeProjectCourse2.csproj
+++ b/CollegeProjectCourse2/CollegeProjectCourse2.csproj
@@ -117,6 +117,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Database.mdf</DependentUpon>
     </Content>
+    <Resource Include="original.gif" />
+    <Resource Include="sample-logo.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6">
