Релиз перед сдачей Реализована игровая механика Реализована игра

--- a/CollegeProjectCourse2/CollegeProjectCourse2.csproj
+++ b/CollegeProjectCourse2/CollegeProjectCourse2.csproj
@@ -78,6 +78,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Card.cs" />
+    <Compile Include="CardCollode.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -117,6 +120,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Database.mdf</DependentUpon>
     </Content>
+    <Resource Include="m7uqrojwh0921.jpg" />
     <Resource Include="original.gif" />
     <Resource Include="sample-logo.png" />
   </ItemGroup>
